--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,3 +1,7 @@
-@import "../node_modules/normalize.css/normalize";
+// TODO: find a more reliable way to handle this
+// Loads: node_modules/normalize.css/normalize.css
+// From: node_modules/@cosmic-plus/assets/scss
+@import "../../../normalize.css/normalize";
+
 @import "./screen";
 @import "./universal";
