--- a/scss/universal.scss
+++ b/scss/universal.scss
@@ -4,6 +4,12 @@
   display: none!important;
 }
 
+select {
+  // Prevent browser imposed style.
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
+
 html {
   box-sizing: border-box;
   vertical-align: middle;
