--- a/scss/universal.scss
+++ b/scss/universal.scss
@@ -7,10 +7,10 @@
 html {
   box-sizing: border-box;
   vertical-align: middle;
-
-  // Prevent Android Chrome font boost.
-  * { max-height: 100%; }
 }
+
+// Prevent Android Chrome font boost.
+body > * { max-height: 100%; }
 
 *, *:before, *:after {
   box-sizing: inherit;
