--- a/scss/elevation.scss
+++ b/scss/elevation.scss
@@ -1,30 +1,39 @@
 /* Elevation */
 @mixin elevation ($lv) {
   @if $lv==0 {
-    box-shadow: none
+    z-index: 0;
+    box-shadow: none;
   }
   @else if $lv==1 {
+    z-index: 100;
     box-shadow: 0 0 2px 0 rgba(0,0,0,.14),0 2px 2px 0 rgba(0,0,0,.12),0 1px 3px 0 rgba(0,0,0,.2)
   }
   @else if $lv==2 {
+    z-index: 200;
     box-shadow: 0 0 4px 0 rgba(0,0,0,.14),0 3px 4px 0 rgba(0,0,0,.12),0 1px 5px 0 rgba(0,0,0,.2)
   }
   @else if $lv==4 {
+    z-index: 400;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.14),0 4px 5px 0 rgba(0,0,0,.12),0 1px 10px 0 rgba(0,0,0,.2)
   }
   @else if $lv==6 {
+    z-index: 600;
     box-shadow: 0 6px 10px 0 rgba(0,0,0,.14),0 1px 18px 0 rgba(0,0,0,.12),0 3px 5px 0 rgba(0,0,0,.2)
   }
   @else if $lv==8 {
+    z-index: 800;
     box-shadow: 0 8px 10px 1px rgba(0,0,0,.14),0 3px 14px 3px rgba(0,0,0,.12),0 4px 15px 0 rgba(0,0,0,.2)
   }
   @else if $lv==12 {
+    z-index: 1200;
     box-shadow: 0 16px 24px 2px rgba(0,0,0,.14),0 6px 30px 5px rgba(0,0,0,.12),0 8px 10px 0 rgba(0,0,0,.2)
   }
   @else if $lv==16 {
+    z-index: 1600;
     box-shadow: 0 24px 38px 3px rgba(0,0,0,.14),0 9px 46px 8px rgba(0,0,0,.12),0 11px 15px 0 rgba(0,0,0,.2)
   }
   @else if $lv==24 {
+    z-index: 2400;
     box-shadow: 0 24px 38px 3px rgba(0,0,0,.14),0 9px 46px 8px rgba(0,0,0,.12),0 11px 15px 0 rgba(0,0,0,.2)
   }
 }
