--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -1,30 +1,34 @@
 /* Screen-size Handling */
 
-@-ms-viewport{
-  width: device-width;
-}
+$small-screen:
+  "screen and (min-width: 800px), screen and (min-height: 600px)";
+$medium-screen:
+  "screen and (min-width: 1024px), screen and (min-height: 768px)";
+$large-screen:
+  "screen and (min-width: 1366px), screen and (min-height: 1024px)";
+$xlarge-screen:
+  "screen and (min-width: 1920px), screen and (min-height: 1366px)";
+$xxlarge-screen:
+  "screen and (min-width: 2560px)";
 
-@media screen and (min-width: 46em), screen and (min-height: 36.5em)
-{
+@-ms-viewport { width: device-width; }
+
+@media #{$small-screen} {
   html { font-size: 1.1em; }
 }
 
-@media screen and (min-width: 62em), screen and (min-height: 48em)
-{
+@media #{$medium-screen} {
   html { font-size: 1.2em; }
 }
 
-@media screen and (min-width: 83em), screen and (min-height: 64em)
-{
+@media #{$large-screen} {
   html { font-size: 1.3em; }
 }
 
-@media (min-width: 118em), screen and (min-height: 85em)
-{
+@media #{$xlarge-screen} {
   html { font-size: 1.5em; }
 }
 
-@media (min-width: 158em)
-{
+@media #{$xxlarge-screen} {
   html { font-size: 1.8em; }
 }
